--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ section {
 .link-button {
     text-decoration: none;
     color: white;
-    background-image: linear-gradient(tomato, orange);
+    background-color: tomato;
     font-weight: 700;
     padding: 1% 3%;
-    border-radius: 20px;
+    border-radius: 7px;
     font-size: 20px;
 }
 
@@ -104,6 +104,25 @@ section {
 #Education-bg {
     background-color: antiquewhite;
 }
+
+
+
+
+#update-input {
+    background-color: rgb(247, 234, 218);
+    width: 50%;
+    margin-left: 25%;
+    padding-top: 4%;
+    text-align: center;
+    padding: 3%;
+}
+
+#send-email {
+    font-weight: 600;
+    padding: 1% 3%;
+    height: 20px;
+}
+
 
 
 footer {
