--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ span {
     font-weight: 600;
     padding: 1% 3%;
     height: 20px;
+    margin-left: 22%;
 }
 
 /*Footer section design here*/
